@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.12 2004/09/06 10:44:44 martti Exp $
+# $NetBSD: Makefile,v 1.13 2004/10/28 11:46:30 wiz Exp $
 # FreeBSD Id: Makefile,v 1.5 1998/10/21 00:57:27 steve Exp
 
-DISTNAME=	LPRng-3.6.26
-PKGREVISION=	1
+DISTNAME=	LPRng-3.6.28
 CATEGORIES=	print
 MASTER_SITES=	# empty
 DISTFILES=	# empty
@@ -11,7 +10,7 @@ MAINTAINER=	martti@NetBSD.org
 HOMEPAGE=	http://www.lprng.com/
 COMMENT=	"meta-package" for LPRng, Enhanced Printer Spooler
 
-DEPENDS+=	LPRng-core-3.8.27nb1:../../print/LPRng-core
+DEPENDS+=	LPRng-core-3.8.28:../../print/LPRng-core
 DEPENDS+=	LPRng-doc-3.6.13:../../print/LPRng-doc
 
 EXTRACT_ONLY=		# empty
